update @RestClientTest example